--- a/styles/layout/_topnav_mobile.scss
+++ b/styles/layout/_topnav_mobile.scss
@@ -6,6 +6,7 @@
 
 .topnav-mobile {
   @include position(fixed, 0 0 null);
+  z-index: 999;
 
   .navbar {
     position: relative;
@@ -34,6 +35,11 @@
   }
 
   .menu {
+    list-style: none;
+    -webkit-margin-before: 0;
+    -webkit-margin-after: 0;
+    -webkit-padding-start: 0;
+
     li {
       background: $topnav-mobile-nav-bg;
       border-top: 1px solid $topnav-mobile-nav-color;
@@ -56,6 +62,7 @@
     @include align-items(flex-end);
     text-align: left;
     padding: 0;
+    border-bottom: 1px solid #B5A36A;
 
     a {
       display: inline-block;
